# SDD

./: .env.example  .gitignore  README.md  SDD项目分析报告.md  pyproject.toml  shrimp-rules.md
.cache/: project-explorer-snapshot.json
.spec/: attached-project.json  sdd-interface.json
config/: polyquery.example.json
docs/: agent-integration.md  attached-project-mode.md  polyquery-integration.md  sdd-architecture-improvement-backlog.md  sdd-architecture-open-items.md  task-board-prd.md  team-onboarding.md  tob-oa-office-prd.md
document/: SDD项目设计.md  ai-sdd-workflow-v3.4.md  sdd-workflow-blueprint.md  sdd_汇报与试点优化方案_4445e498.plan.md  skill-mcp-harness-sdd-enhanced-v3.4.md  skill-mcp-harness-sdd.md  v3.4-当前实现差距分析-2026-04-29.md  基于初始设计稿的后续推进拆分清单-2026-05-06.md  基于初始设计稿的当前项目差距与推进建议-2026-05-06.md  当前项目架构实际可用性验证报告-2026-05-07.md  排除polyquery后的当前剩余问题分析-2026-04-29.md  状态机类文档命名规则.md
scripts/: ambiguity_tracker.py  approve_design.py  assert_json_contains.py  assert_json_value.py  assert_schema_context_fixture.py  attach_target_project.py  attached_project.py  baseline_extractors.py  baseline_governance.py  baseline_paths.py  baseline_validators.py  bootstrap_feature.py  bootstrap_utils.py  build_approval_summary.py  build_flow_overview.py  build_flow_status.py  build_project_console.py  build_project_next.py  build_workspace_hygiene.py  check_approval.py  check_arch_semantics.py  check_arch_standards_sync.py  check_baseline_key_partition.py  check_design_pack.py  check_design_structure.py  check_design_test_coverage.py  check_design_truthfulness.py  check_feature_brief.py  doctor.py  (+52 more)
(+363 files in other folders)
